add wav2lip functionality and cleanup frontend
