# app/tech_assess_backend/docs/openapi.yaml
@@ -22,36 +22,31 @@ paths:
             schema:
               type: object
               properties:
-                audio_video:
+                audio_video_file:
                   type: string
                   format: binary
-                audio_only:
+                audio_only_file:
                   type: string
                   format: binary
-                video_only:
+                video_only_file:
                   type: string
                   format: binary
-            encoding:
-              file:
-                contentType: audio/mpeg
       responses:
         '201':
           description: Files uploaded
           content:
             application/json:
               schema:
-                type: object
+                $ref: "#/components/schemas/Recording"
         '400':
           description: Bad request.
-        '415':
-          description: Unsupported media file format.
         '5XX':
           description: Unexpected error.
 
   /recordings/{uuid}:
+    parameters:
+      - $ref: "#/components/parameters/RecordingUUID"
     get:
-      parameters:
-        - $ref: "#/components/parameters/RecordingUUID"
       summary: Get recording object
       responses:
         '200':
@@ -61,15 +56,28 @@ paths:
               schema:
                 $ref: "#/components/schemas/Recording"
 
+  /recordings/{uuid}/output
+    parameters:
+      - $ref: "#/components/parameters/RecordingUUID"
+    get:
+      summary: Get recording combined output video
+      responses:
+        '200':
+          description: OK
+          content: video/mp4
+
 
 components:
   schemas:
     Recording:
       type: object
       properties:
-        audio_video_url:
+        audio_video_filepath:
           type: string
-        audio_only_filepath
+        audio_only_filepath:
+          type: string
+        video_only_filepath:
+          type: string
 
   parameters:
     RecordingUUID:
